--- a/current-training/programming/html/playground/page web/exercice-structure-html-hard.html
+++ b/current-training/programming/html/playground/page web/exercice-structure-html-hard.html
@@ -42,6 +42,7 @@
         </p>
         <p>
             Lycée privé Notre Dame de Sion
+            <br>Bac S - SVT / Latin
         </p>
         <h2 id="compétences">Compétences</h2>
         <h3>Compétences techniques :</h3>
