--- a/current-training/programming/html/playground/page web/exercice-structure-html-hard.html
+++ b/current-training/programming/html/playground/page web/exercice-structure-html-hard.html
@@ -1,88 +1,92 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Ma troisième page web</title>
-    </head>
-    <body>
-        <h1>Camille Warembourg</h1>
-        <em>Développeur Web Junior</em>
-        <nav>
-            <ul>
-                <li><a href="#profil">Profil</a></li>
-                <li><a href="#formation">Formation</a></li>
-                <li><a href="#compétences">Compétences</a></li>
-                <li><a href="#projets">Projets</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#reseaux">Réseaux sociaux</a></li>
-            </ul>
-        </nav>
-        <h2 id="profil">Profil</h2>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ma troisième page web</title>
+</head>
+
+<body>
+    <img src="https://cdn-icons-png.freepik.com/512/168/168905.png" alt="avatar">
+    <h1>Camille Warembourg</h1>
+    <em>Développeur Web Junior</em>
+    <nav>
+        <ul>
+            <li><a href="#profil">Profil</a></li>
+            <li><a href="#formation">Formation</a></li>
+            <li><a href="#compétences">Compétences</a></li>
+            <li><a href="#projets">Projets</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#reseaux">Réseaux sociaux</a></li>
+        </ul>
+    </nav>
+    <h2 id="profil">Profil</h2>
+    <p>
+        Passionnée par le développement web,
+        <br>je suis actuellement en formation
+        <br> pour devenir développeur web et
+        <br>web mobile. Je suis à la recherche
+        <br>d'opportunités pour mettre en pratique
+        <br>mes connaissances et développer mes
+        <br>compétences dans un environnement professionnel.
+    </p>
+    <h2 id="formation">Formation</h2>
+    <h3>Formation Développeur Web et Web Mobile</h3>
+    <p>
+        <strong>2025 - Actuellement</strong>
+    </p>
+    <p>
+        Titre professionnel RNCP37674 - Niveau 5
+    </p>
+    <h3>Baccalauréat</h3>
+    <p>
+        <strong>2006-2010</strong>
+    </p>
+    <p>
+        Lycée privé Notre Dame de Sion
+        <br>Bac S - SVT / Latin
+    </p>
+    <h2 id="compétences">Compétences</h2>
+    <h3>Compétences techniques :</h3>
+    <ul>
+        <li><strong>Langages</strong>: HTML, CSS</li>
+        <li><strong>Outils</strong>: VS Code, Git</li>
+    </ul>
+    <h3>Langues :</h3>
+    <ul>
+        <li><strong>Français</strong>: Langue maternelle</li>
+        <li><strong>Anglais</strong>: Notions</li>
+        <li><strong>Espagnol</strong>: Notions</li>
+    </ul>
+    <h2 id="projets">Projets :</h2>
+    <ul>
+        <li><strong>Personnel</strong>: Voyager</li>
+        <li><strong>Professionnel</strong>: Ouvrir une boutique en ligne</li>
+    </ul>
+    <h2 id="contact">Contact :</h2>
+    <ul>
+        <li><strong>Email</strong>: warembourgcamille@gmail.com</li>
+        <li><strong>Téléphone</strong>: 06.18.31.52.26</li>
+        <li><strong>Ville</strong>: Dunkerque (59)</li>
+    </ul>
+    <h2 id="reseaux">Réseaux Sociaux :</h2>
+    <nav>
+        <ul>
+            <li><a href="https://www.facebook.com">Facebook</a></li>
+            <li><a href="https://www.instagram.com">Instagram</a></li>
+            <li><a href="https://fr.linkedin.com/">LinkedIn</a></li>
+            <li><a href="https://x.com">X (Twitter)</a></li>
+        </ul>
+    </nav>
+    <footer>
         <p>
-            Passionnée par le développement web,
-            <br>je suis actuellement en formation
-            <br> pour devenir développeur web et
-            <br>web mobile. Je suis à la recherche
-            <br>d'opportunités pour mettre en pratique
-            <br>mes connaissances et développer mes
-            <br>compétences dans un environnement professionnel.
-        </p>
-        <h2 id="formation">Formation</h2>
-        <h3>Formation Développeur Web et Web Mobile</h3>
-        <p>
-            <strong>2025 - Actuellement</strong>
+            &copy; - CV réalisé dans le cadre de la formation Développeur Web et Web Mobile
         </p>
         <p>
-            Titre professionnel RNCP37674 - Niveau 5
+            Ce site respecte les normes d'accessibilité web.
         </p>
-        <h3>Baccalauréat</h3>
-        <p>
-            <strong>2006-2010</strong>
-        </p>
-        <p>
-            Lycée privé Notre Dame de Sion
-            <br>Bac S - SVT / Latin
-        </p>
-        <h2 id="compétences">Compétences</h2>
-        <h3>Compétences techniques :</h3>
-            <ul>
-                <li><strong>Langages</strong>: HTML, CSS</li>
-                <li><strong>Outils</strong>: VS Code, Git</li>
-            </ul>
-        <h3>Langues :</h3>
-            <ul>
-                <li><strong>Français</strong>: Langue maternelle</li>
-                <li><strong>Anglais</strong>: Notions</li>
-                <li><strong>Espagnol</strong>: Notions</li>
-            </ul>
-        <h2 id="projets">Projets :</h2>
-            <ul>
-                <li><strong>Personnel</strong>: Voyager</li>
-                <li><strong>Professionnel</strong>: Ouvrir une boutique en ligne</li>
-            </ul>
-        <h2 id="contact">Contact :</h2>
-            <ul>
-                <li><strong>Email</strong>: warembourgcamille@gmail.com</li>
-                <li><strong>Téléphone</strong>: 06.18.31.52.26</li>
-                <li><strong>Ville</strong>: Dunkerque (59)</li>
-            </ul>
-        <h2 id="reseaux">Réseaux Sociaux :</h2>
-            <nav>
-                <ul>
-                    <li><a href="https://www.facebook.com">Facebook</a></li>
-                    <li><a href="https://www.instagram.com">Instagram</a></li>
-                    <li><a href="https://fr.linkedin.com/">LinkedIn</a></li>
-                    <li><a href="https://x.com">X (Twitter)</a></li>
-                </ul>
-            </nav>
-        <footer>
-            <p>
-                &copy; - CV réalisé dans le cadre de la formation Développeur Web et Web Mobile
-            </p>
-            <p>
-                Ce site respecte les normes d'accessibilité web.
-            </p>
-        </footer>
-    </body>
+    </footer>
+</body>
+
 </html>
