--- a/current-training/programming/css/about.html
+++ b/current-training/programming/css/about.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Mon premier test CSS</title>
 </head>
-
+<style></style>
 <body>
     <header>
-        <h1>Les sélecteurs CSS</h1>
+        <h1>Les identifians CSS</h1>
     </header>
     <main>
-        <div>
+        <div id="fond">
             <p>
                 Paragraphe standard sans classe ni ID.
             </p>
