--- a/current-training/programming/css/playground/exercices-background/bg-medium/index.html
+++ b/current-training/programming/css/playground/exercices-background/bg-medium/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 id="titre">Ma page avec fond d'écran</h1>
+        <h1>Ma page avec fond d'écran</h1>
     </header>
     <main>
         <div>
@@ -29,7 +29,7 @@
         </div>
     </main>
     <footer>
-        <p id="end-page">
+        <p id="banner">
             &copy; 2025 - Exemple de page avec fond d'écran
         </p>
     </footer>
