--- a/current-training/programming/css/playground/exercices-formulaires/formulaire-medium/index.html
+++ b/current-training/programming/css/playground/exercices-formulaires/formulaire-medium/index.html
@@ -44,7 +44,7 @@
                 <input type="date" id="birthday" name="birthday">
             </div>
             <div>
-                <label class="titre">Genre</label>
+                <label class="titre" for="gender">Genre</label>
             </div>
             <div class="group-form">
                 <input type="radio" id="male" name="gender" value="male">
