--- a/current-training/programming/css/playground/exercice-positionnement/positionnement-easy/index.html
+++ b/current-training/programming/css/playground/exercice-positionnement/positionnement-easy/index.html
@@ -8,3 +8,32 @@
     <link rel="stylesheet" href="style.css">
     <title>Exercice positionnement easy</title>
 </head>
+
+<body>
+    <header id="container">
+        <div>
+            <h2>DevStudio</h2>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="url">Accueil</a></li>
+
+                <li><a href="url">Service</a></li>
+
+                <li><a href="url">Portfolio</a></li>
+
+                <li><a href="url">À propos</a></li>
+
+                <li><button>Contact</button></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Bienvenue sur notre site</h1>
+        <p>
+            Ceci est un exemple de menu de navigation simple utilisant Flexbox
+        </p>
+    </main>
+</body>
+
+</html>
