--- a/current-training/programming/css/playground/exercice-positionnement/positionnement-easy/index.html
+++ b/current-training/programming/css/playground/exercice-positionnement/positionnement-easy/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <header id="container">
-        <div>
+        <div id="logo-style">
+            <img src="https://img.icons8.com/?size=100&id=114004&format=png&color=000000" alt="logo">
             <h2>DevStudio</h2>
         </div>
         <nav>
