--- a/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
+++ b/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>Exercice positionnement easy</title>
+    <title>Exercice positionnement medium</title>
 </head>
 
 <body>
     <header id="container">
         <div id="logo-style">
             <img src="https://img.icons8.com/?size=100&id=114004&format=png&color=000000" alt="logo">
-            <h2>DevStudio</h2>
+            <h2>Horizon</h2>
         </div>
         <nav>
             <ul>
@@ -30,9 +30,9 @@
         </nav>
     </header>
     <main>
-        <h1>Bienvenue sur notre site</h1>
+        <h1>Bienvenue chez Horizon</h1>
         <p>
-            Ceci est un exemple de menu de navigation simple utilisant Flexbox
+            Découvrez nos solutions innovantes pour votre entreprise
         </p>
     </main>
 </body>
