avancement exercice navbar medium

--- a/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
+++ b/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="container">
         <div id="logo-style">
-            <img src="https://img.icons8.com/?size=100&id=65195&format=png&color=000000" alt="logo">
+            <img src="https://img.icons8.com/?size=100&id=65184&format=png&color=000000" alt="logo">
             <h2>Horizon</h2>
         </div>
         <nav>
@@ -30,11 +30,84 @@
         </nav>
     </header>
     <main>
-        <h1>Bienvenue chez Horizon</h1>
-        <p>
-            Découvrez nos solutions innovantes pour votre entreprise
-        </p>
+        <section id="start-main">
+            <h1>Bienvenue chez Horizon</h1>
+            <p>
+                Découvrez nos solutions innovantes pour votre entreprise
+            </p>
+        </section>
+        <div>
+            <h2 class="sous-titres">
+                Nos services
+            </h2>
+        </div>
+        <section id="services">
+            <div class="box">
+                <img src="https://img.icons8.com/?size=100&id=XvJbUGKqFZHQ&format=png&color=000000" alt="logo-pc">
+                <h3>
+                    Développement Web
+                </h3>
+                <p>
+                    Création de sites web et applications web personnalisés pour répondre à vos besoins spécifiques.
+                </p>
+            </div>
+            <div class="box">
+                <img src="https://img.icons8.com/?size=100&id=hUPSeJK3ATZd&format=png&color=000000" alt="logo-phone">
+                <h3>
+                    Applications mobiles
+                </h3>
+                <p>
+                    Développement d'applications mobiles natives et hybrides pour iOS et Android.
+                </p>
+            </div>
+            <div class="box">
+                <img src="https://img.icons8.com/?size=100&id=XQU0I5wlfGTI&format=png&color=000000" alt="logo-design">
+                <h3>
+                    UI/UX Design
+                </h3>
+                <p>
+                    Conception d'interfaces utilisateur intuitives et d'expériences utilisateur exceptionnelles.
+                </p>
+            </div>
+        </section>
+        <section class="fond">
+            <div class="contenu">
+            <h2 class="sous-titres">
+                Notre Portfolio
+            </h2>
+            <p class="p-main">
+                Découvrez nos projets récents
+            </p>
+            <div class="encadre">
+                <p class="contenu-deux">
+                    Contenu du portfolio
+                </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2 class="sous-titres"> 
+                À Propos de Nous
+            </h2>
+            <p class="p-main">
+               Horizon est une agence de développement web fondée en 2020, spécialisée dans la création
+               de solutions numériques innovantes.
+            </p>
+            <p class="p-main">
+                Notre équipe de développeurs et designers passionnés s'engagent à offrir des produits de haute 
+                qualité qui répondent aux besoins uniques de chaque client.
+            </p>
+            <p class="p-main">
+                Nous croyons en la simplicité, la fonctionnalité et l'esthétique dans tout ce que 
+                nous créons.
+            </p>
+        </section>
     </main>
+    <footer>
+        <p id="foot-text">
+            &copy; 2025 Horizon. Tous droits réservés.
+        </p>
+    </footer>
 </body>
 
 </html>
