exercice positionnement medium modifié

--- a/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
+++ b/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
@@ -17,90 +17,109 @@
         </div>
         <nav>
             <ul>
-                <li><a href="url">Accueil</a></li>
+                <li><a href="#accueil">Accueil</a></li>
 
-                <li><a href="url">Services</a></li>
+                <li><a href="#services">Services</a></li>
 
-                <li><a href="url">Portfolio</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
 
-                <li><a href="url">À propos</a></li>
+                <li><a href="#a-propos">À propos</a></li>
 
                 <li><button>Contact</button></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="start-main">
-            <h1>Bienvenue chez Horizon</h1>
-            <p>
-                Découvrez nos solutions innovantes pour votre entreprise
-            </p>
-        </section>
-        <div>
-            <h2 class="sous-titres">
-                Nos services
-            </h2>
-        </div>
-        <section id="services">
-            <div class="box">
-                <img src="https://img.icons8.com/?size=100&id=XvJbUGKqFZHQ&format=png&color=000000" alt="logo-pc">
-                <h3>
-                    Développement Web
-                </h3>
+        <section>
+            <div id="top-main">
+                <h1 id="accueil">
+                    Bienvenue chez Horizon
+                </h1>
                 <p>
-                    Création de sites web et applications web personnalisés pour répondre à vos besoins spécifiques.
+                    Découvrez nos solutions innovantes pour votre entreprise
                 </p>
-            </div>
-            <div class="box">
-                <img src="https://img.icons8.com/?size=100&id=hUPSeJK3ATZd&format=png&color=000000" alt="logo-phone">
-                <h3>
-                    Applications mobiles
-                </h3>
-                <p>
-                    Développement d'applications mobiles natives et hybrides pour iOS et Android.
-                </p>
-            </div>
-            <div class="box">
-                <img src="https://img.icons8.com/?size=100&id=XQU0I5wlfGTI&format=png&color=000000" alt="logo-design">
-                <h3>
-                    UI/UX Design
-                </h3>
-                <p>
-                    Conception d'interfaces utilisateur intuitives et d'expériences utilisateur exceptionnelles.
-                </p>
-            </div>
-        </section>
-        <section class="fond">
-            <div class="contenu">
-            <h2 class="sous-titres">
-                Notre Portfolio
-            </h2>
-            <p class="p-main">
-                Découvrez nos projets récents
-            </p>
-            <div class="encadre">
-                <p class="contenu-deux">
-                    Contenu du portfolio
-                </p>
-                </div>
             </div>
         </section>
         <section>
-            <h2 class="sous-titres"> 
+            <h2 id="services">
+                Nos services
+            </h2>
+            <div class="container">
+                <div class="box">
+                    <img src="https://img.icons8.com/?size=100&id=XvJbUGKqFZHQ&format=png&color=000000" alt="icone-dev">
+                    <h3>
+                        Développement Web
+                    </h3>
+                    <p>
+                        Création de sites web et applications web
+                        personnalisés pour répondre à vos besoins spécifiques.
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="https://img.icons8.com/?size=100&id=hUPSeJK3ATZd&format=png&color=000000" alt="icone-dev">
+                    <h3>
+                        Applications mobiles
+                    </h3>
+                    <p>
+                        Développement d'applications mobiles natives et hybrides pour
+                        iOS et Android.
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="https://img.icons8.com/?size=100&id=XQU0I5wlfGTI&format=png&color=000000" alt="icone-dev">
+                    <h3>
+                        UI/UX Design
+                    </h3>
+                    <p>
+                        Conception d'interfaces utilisateur intuitives et d'expériences utilisateur exceptionnelles.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="bg-color">
+
+            <h2 id="portfolio">
+                Notre Portfolio
+            </h2>
+            <p>
+                Découvrez nos projets
+            </p>
+            <div>
+                <p id="case">
+                    Contenu du portfolio
+                </p>
+            </div>
+
+        </section>
+        <section>
+            <h2 id="a-propos">
                 À Propos de Nous
             </h2>
-            <p class="p-main">
-               Horizon est une agence de développement web fondée en 2020, spécialisée dans la création
-               de solutions numériques innovantes.
+            <p>
+                Horizon est une agence de développement web fondée en 2020, spécialisée dans la création
+                de solutions numériques innovantes.
             </p>
-            <p class="p-main">
-                Notre équipe de développeurs et designers passionnés s'engagent à offrir des produits de haute 
+            <p>
+                Notre équipe de développeurs et designers passionnés s'engagent à offrir des produits de haute
                 qualité qui répondent aux besoins uniques de chaque client.
             </p>
-            <p class="p-main">
-                Nous croyons en la simplicité, la fonctionnalité et l'esthétique dans tout ce que 
+            <p>
+                Nous croyons en la simplicité, la fonctionnalité et l'esthétique dans tout ce que
                 nous créons.
             </p>
+        </section>
+        <section class="bg-color">
+            <h2 id="contact">
+                Contactez-nous
+            </h2>
+            <p>
+                Vous avez un projet en tête ? N'hésitez pas à nous contacter !
+            </p>
+            <div>
+                <p id="case">
+                    Formulaire de contact
+                </p>
+            </div>
         </section>
     </main>
     <footer>
