exercice positionnement medium à peaufiner

--- a/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
+++ b/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/index.html
@@ -40,7 +40,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section class="bg-color">
             <h2 id="services">
                 Nos services
             </h2>
@@ -74,9 +74,8 @@
                         Conception d'interfaces utilisateur intuitives et d'expériences utilisateur exceptionnelles.
                     </p>
                 </div>
-            </div>
         </section>
-        <section class="bg-color">
+        <section>
 
             <h2 id="portfolio">
                 Notre Portfolio
@@ -85,13 +84,13 @@
                 Découvrez nos projets
             </p>
             <div>
-                <p id="case">
+                <p class="case">
                     Contenu du portfolio
                 </p>
             </div>
 
         </section>
-        <section>
+        <section class="bg-color">
             <h2 id="a-propos">
                 À Propos de Nous
             </h2>
@@ -108,7 +107,7 @@
                 nous créons.
             </p>
         </section>
-        <section class="bg-color">
+        <section>
             <h2 id="contact">
                 Contactez-nous
             </h2>
@@ -116,7 +115,7 @@
                 Vous avez un projet en tête ? N'hésitez pas à nous contacter !
             </p>
             <div>
-                <p id="case">
+                <p class="case">
                     Formulaire de contact
                 </p>
             </div>
