exercice grid easy à poursuivre

--- a/current-training/programming/css/playground/exercices-background/exercice-css-background-3-hard/index.html
+++ b/current-training/programming/css/playground/exercices-background/exercice-css-background-3-hard/index.html
@@ -51,11 +51,11 @@
         <h2 id="contact">Contactez-nous</h2>
         <div id="form">
           <div class="label-position">
-            <label for="name" name="name"></label>
+            <label for="name"></label>
             <input type="text" id="name" name="name" placeholder="Nom" />
           </div>
           <div class="label-position">
-            <label for="email" name="email"></label>
+            <label for="email"></label>
             <input type="email" id="email" name="email" placeholder="Email" />
           </div>
           <div class="label-position">
