--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -25,5 +25,97 @@
         <li><a href="#a-propos">À propos</a></li>
       </ul>
     </nav>
+    <main>
+        <div>
+        <h2>
+            Conception web écologique
+        </h2>
+        <p>
+            Publié le 21 avril 2025
+        </p>
+        </div>
+        <div>
+            <p>
+                Le design web écologique, aussi connu sous le nom d'éco-conception web, 
+                est une approche de conception qui vise à réduire l'impact environnemental
+                des sites web et applications en optimisant leur efficacité énergétique.
+            </p>
+        </div>
+        <div>
+            <h3>
+                Principes fondamentaux
+            </h3>
+            <p>
+                L'éco-conception repose sur plusieurs principes :
+            </p>
+            <ul>
+                <li>Optimisation des performances</li>
+                <li>Réduction du poids des pages</li>
+                <li>Minimisation des enquêtes serveur</li>
+                <li>Choix d'hébergeurs éco-responsables</li>
+            </ul>
+        </div>
+        <div>
+            <h3>
+                Bonnes pratiques
+            </h3>
+            <p>
+                Pour créer un site web plus respectueux de l'environnement, on peut :
+            </p>
+            <ul>
+                <li>Compresser les images et utiliser des formats modernes (WebP)</li>
+                <li>Simplifier le design et éviter les éléments superflus</li>
+                <li>Mettre en place la mise en cache côté cliebnt</li>
+                <li>Réduire l'utilisation de JavaScript</li>
+                <li>Optimiser le CSS en éliminant les règles inutilisées</li>
+            </ul>
+        </div>
+        <section>
+        <div>
+            <h3>
+                Avantages pour les utilisateurs
+            </h3>
+            <p>
+                Un site web éco-conçu offre généralement :
+            </p>
+            <ul>
+                <li>Un chargement plus rapide des pages</li>
+                <li>Une meilleure expérience sur les appareils mobiles</li>
+                <li>une accessibilité améliorée</li>
+                <li>Une consommation réduite de données</li>
+            </ul>
+        </div>
+        <div>
+            <h3>
+                Avantages pour les entreprises
+            </h3>
+            <p>
+                L'éco-conception présente également des bénéfices business :
+            </p>
+            <ul>
+                <li>Réduction des coûts d'infrastructure</li>
+                <li>Amélioration du référencement (SEO)</li>
+                <li>Augmentation des taux de conversion</li>
+                <li>Valorisation de l'image de marque</li>
+            </ul>
+        </div>
+        </section>
+        <div>
+            <p>
+                En adoptant ces pratiques, les développeurs et designers peuvent contribuer à réduire l'emprunte
+                carbone du web, qui représente aujourd'hui près de 4% des émissions mondiales de gaz à effet
+                de serre.
+            </p>
+        </div>
+        <div>
+            <button>En savoir plus</button>
+        </div>
+    </main>
+    <div id="sidebar">
+
+    </div>
+    <footer>
+
+    </footer>
   </body>
 </html>
