exercice grid medium à poursuivre, page complétée

--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -14,108 +14,163 @@
         src="https://img.icons8.com/?size=100&id=bT3h5O7LsBxQ&format=png&color=000000"
         alt="logo"
       />
-      <h2 id="marque">EcoDesign</h2>
+      <h2 class="marque">EcoDesign</h2>
     </header>
     <nav>
-      <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#a-propos">À propos</a></li>
-      </ul>
+    
+        <a href="#accueil">Accueil</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#blog">Blog</a>
+        <a href="#a-propos">À propos</a>
+    
     </nav>
     <main>
-        <div>
-        <h2>
-            Conception web écologique
-        </h2>
+      <div>
+        <h2>Conception web écologique</h2>
+        <p>Publié le 21 avril 2025</p>
+      </div>
+      <div>
         <p>
-            Publié le 21 avril 2025
+          Le design web écologique, aussi connu sous le nom d'éco-conception
+          web, est une approche de conception qui vise à réduire l'impact
+          environnemental des sites web et applications en optimisant leur
+          efficacité énergétique.
         </p>
+      </div>
+      <div>
+        <h3>Principes fondamentaux</h3>
+        <p>L'éco-conception repose sur plusieurs principes :</p>
+        <ul>
+          <li>Optimisation des performances</li>
+          <li>Réduction du poids des pages</li>
+          <li>Minimisation des enquêtes serveur</li>
+          <li>Choix d'hébergeurs éco-responsables</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Bonnes pratiques</h3>
+        <p>
+          Pour créer un site web plus respectueux de l'environnement, on peut :
+        </p>
+        <ul>
+          <li>Compresser les images et utiliser des formats modernes (WebP)</li>
+          <li>Simplifier le design et éviter les éléments superflus</li>
+          <li>Mettre en place la mise en cache côté cliebnt</li>
+          <li>Réduire l'utilisation de JavaScript</li>
+          <li>Optimiser le CSS en éliminant les règles inutilisées</li>
+        </ul>
+      </div>
+      <section>
+        <div>
+          <h3>Avantages pour les utilisateurs</h3>
+          <p>Un site web éco-conçu offre généralement :</p>
+          <ul>
+            <li>Un chargement plus rapide des pages</li>
+            <li>Une meilleure expérience sur les appareils mobiles</li>
+            <li>une accessibilité améliorée</li>
+            <li>Une consommation réduite de données</li>
+          </ul>
         </div>
         <div>
-            <p>
-                Le design web écologique, aussi connu sous le nom d'éco-conception web, 
-                est une approche de conception qui vise à réduire l'impact environnemental
-                des sites web et applications en optimisant leur efficacité énergétique.
-            </p>
+          <h3>Avantages pour les entreprises</h3>
+          <p>L'éco-conception présente également des bénéfices business :</p>
+          <ul>
+            <li>Réduction des coûts d'infrastructure</li>
+            <li>Amélioration du référencement (SEO)</li>
+            <li>Augmentation des taux de conversion</li>
+            <li>Valorisation de l'image de marque</li>
+          </ul>
         </div>
-        <div>
-            <h3>
-                Principes fondamentaux
-            </h3>
-            <p>
-                L'éco-conception repose sur plusieurs principes :
-            </p>
-            <ul>
-                <li>Optimisation des performances</li>
-                <li>Réduction du poids des pages</li>
-                <li>Minimisation des enquêtes serveur</li>
-                <li>Choix d'hébergeurs éco-responsables</li>
-            </ul>
-        </div>
-        <div>
-            <h3>
-                Bonnes pratiques
-            </h3>
-            <p>
-                Pour créer un site web plus respectueux de l'environnement, on peut :
-            </p>
-            <ul>
-                <li>Compresser les images et utiliser des formats modernes (WebP)</li>
-                <li>Simplifier le design et éviter les éléments superflus</li>
-                <li>Mettre en place la mise en cache côté cliebnt</li>
-                <li>Réduire l'utilisation de JavaScript</li>
-                <li>Optimiser le CSS en éliminant les règles inutilisées</li>
-            </ul>
-        </div>
-        <section>
-        <div>
-            <h3>
-                Avantages pour les utilisateurs
-            </h3>
-            <p>
-                Un site web éco-conçu offre généralement :
-            </p>
-            <ul>
-                <li>Un chargement plus rapide des pages</li>
-                <li>Une meilleure expérience sur les appareils mobiles</li>
-                <li>une accessibilité améliorée</li>
-                <li>Une consommation réduite de données</li>
-            </ul>
-        </div>
-        <div>
-            <h3>
-                Avantages pour les entreprises
-            </h3>
-            <p>
-                L'éco-conception présente également des bénéfices business :
-            </p>
-            <ul>
-                <li>Réduction des coûts d'infrastructure</li>
-                <li>Amélioration du référencement (SEO)</li>
-                <li>Augmentation des taux de conversion</li>
-                <li>Valorisation de l'image de marque</li>
-            </ul>
-        </div>
-        </section>
-        <div>
-            <p>
-                En adoptant ces pratiques, les développeurs et designers peuvent contribuer à réduire l'emprunte
-                carbone du web, qui représente aujourd'hui près de 4% des émissions mondiales de gaz à effet
-                de serre.
-            </p>
-        </div>
-        <div>
-            <button>En savoir plus</button>
-        </div>
+      </section>
+      <div>
+        <p>
+          En adoptant ces pratiques, les développeurs et designers peuvent
+          contribuer à réduire l'emprunte carbone du web, qui représente
+          aujourd'hui près de 4% des émissions mondiales de gaz à effet de
+          serre.
+        </p>
+      </div>
+      <div>
+        <button>En savoir plus</button>
+      </div>
     </main>
     <div id="sidebar">
-
+      <div>
+        <h3>Articles récents</h3>
+        <p>Optimisation des images pour le web</p>
+        <p>Comment réduire la consommation d'énergie de votre site</p>
+        <p>L'impact environnemental du streaming vidéo</p>
+        <p>10 astuces pour un code plus propre</p>
+      </div>
+      <div>
+        <h3>Newsletter</h3>
+        <p>
+          Recevez nos conseils pour un web plus vert directement dans votre
+          boîte mail.
+        </p>
+        <label for="email"></label>
+        <input type="email" id="email" name="email" placeholder="Votre email" />
+        <button type="submit">S'abonner</button>
+      </div>
+      <div id="catégories">
+        <h3>Catégories</h3>
+        <a href="développement">Développement</a>
+        <a href="design">Design</a>
+        <a href="performances">Performances</a>
+        <a href="SEO">SEO</a>
+        <a href="Accessibilité">Accessibilité</a>
+      </div>
     </div>
     <footer>
-
+      <section>
+        <div>
+          <div id="footer-marque">
+            <img
+              src="https://img.icons8.com/?size=100&id=bT3h5O7LsBxQ&format=png&color=000000"
+              alt="logo"
+            />
+            <h3 class="marque">EcoDesign</h3>
+          </div>
+          <p>Pour un web plus respectueux de notre planète</p>
+        </div>
+        <div>
+          <h4>Liens rapides</h4>
+          <a href="accueil">Accueil</a>
+          <a href="services">Services</a>
+          <a href="blog">Blog</a>
+          <a href="contact">Contact</a>
+        </div>
+        <div>
+          <h4>Contact</h4>
+          <p>123 Rue de l'Écologie</p>
+          <p>75000 Paris, France</p>
+          <p>Email: contact@ecodesign.fr</p>
+          <p>Tel: +33 1 23 45 67 89</p>
+        </div>
+        <div>
+          <h4>Suivez-nous</h4>
+          <img
+            src="https://img.icons8.com/?size=100&id=SQ7yIuRnxkDc&format=png&color=000000"
+            alt="logo-twitter"
+          />
+          <img
+            src="https://img.icons8.com/?size=100&id=n6zycyXovXiZ&format=png&color=000000"
+            alt="logo-fb"
+          />
+          <img
+            src="https://img.icons8.com/?size=100&id=ItjVB1EaJCYA&format=png&color=000000"
+            alt="logo-instagram"
+          />
+          <img
+            src="https://img.icons8.com/?size=100&id=91AZsA4BDGzd&format=png&color=000000"
+            alt="logo-linkedin"
+          />
+        </div>
+      </section>
+      <div id="footer-end">
+        <p>&copy; 2025 EcoDesign. Tous droits réservés.</p>
+      </div>
     </footer>
   </body>
 </html>
