--- a/current-training/programming/css/playground/exercices-selecteur-css/exercice-css-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-selecteur-css/exercice-css-2-medium/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styliser.css">
+    <link rel="stylesheet" href="style.css">
     <title>Mon second test CSS</title>
 </head>
 
