exercice medium grid à poursuivre / responsive à faire

--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/index.html
@@ -17,13 +17,11 @@
       <h2 class="marque">EcoDesign</h2>
     </header>
     <nav>
-    
-        <a href="#accueil">Accueil</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#blog">Blog</a>
-        <a href="#a-propos">À propos</a>
-    
+      <a href="#accueil">Accueil</a>
+      <a href="#services">Services</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#blog">Blog</a>
+      <a href="#a-propos">À propos</a>
     </nav>
     <main>
       <div>
@@ -91,11 +89,11 @@
           serre.
         </p>
       </div>
-      <div>
+      <div id="bouton">
         <button>En savoir plus</button>
       </div>
     </main>
-    <div id="sidebar">
+    <aside id="sidebar">
       <div>
         <h3>Articles récents</h3>
         <p>Optimisation des images pour le web</p>
@@ -121,7 +119,7 @@
         <a href="SEO">SEO</a>
         <a href="Accessibilité">Accessibilité</a>
       </div>
-    </div>
+    </aside>
     <footer>
       <section>
         <div>
